# cpp-namespace-example

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: my_algorithm.h
include/my_foundation/: my_algorithm.h
src/: my_algorithm.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
